# tweaks-lite

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  dev.jaydoubleu.tweaks.lite.json  meson.build  pyproject.toml  tweaks-lite.spec
.github/workflows/: codeql.yml  flatpak.yml  python-tests.yml  verify-screenshots.yml
data/: dev.jaydoubleu.tweaks.lite.desktop.in  dev.jaydoubleu.tweaks.lite.gschema.xml  dev.jaydoubleu.tweaks.lite.metainfo.xml.in  dev.jaydoubleu.tweaks.lite.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
scripts/: build-flatpak.sh  build-rpm.sh
src/: main.py
src/tweakslite/: __init__.py  application.py  config.py  dconf.py  desktop_entry.py  keyboard_page.py  py.typed  utils.py  window.py
src/tweakslite/managers/: __init__.py  autostart.py  dconf.py
src/tweakslite/views/: __init__.py  appearance.py  base.py  extensions.py  fonts.py  keyboard.py  mouse_and_touchpad.py  sound.py  startup_applications.py  windows.py
tests/: conftest.py  requirements-test.txt  test_config.py  test_desktop_entry.py  test_utils.py
