[project]
name = "tweaks-lite"
version = "1.0.0"
description = "A lightweight system configuration tool for GNOME"
authors = [
    {name = "Jay W", email = "git.jaydoubleu@gmail.com"}
]
dependencies = [
    "pygobject>=3.42.0",
    "dbus-python>=1.3.2",
]
requires-python = ">=3.9"
license = {file = "COPYING"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/tweakslite"]

[tool.hatch.build.targets.wheel]
packages = ["src/tweakslite"]

[tool.hatch.build.targets.wheel.shared-data]
"src/tweakslite/py.typed" = "tweakslite/py.typed"

[project.scripts]
tweaks-lite = "tweakslite.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-mock>=3.10.0",
]

[tool.mypy]
python_version = "3.10"  # Adjust to your Python version

# Ignore missing imports for specific modules
[[tool.mypy.overrides]]
module = [
    "gi.*",
    "gi.repository.*",
    "dbus.*",
    "dbus.mainloop.*",
    "dbus.mainloop.glib.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/tweakslite --cov-report=term-missing"
markers = [
    "gtk: marks tests that require GTK initialization",
]

[tool.coverage.run]
source = ["src/tweakslite"]
relative_files = true
branch = true
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
